# emergent-axial-lisp

./: .gitignore  .hlint.yaml  AGENTS.md  CHARTER.md  CONFORMANCE.md  IMPLEMENTATION-PLAN.md  LANGUAGE-SPEC.md  META-CONS-RUNTIME.md  METAOBJECT-PROTOCOL.md  MULTI-AXIAL-TYPE-MODEL.md  Makefile  PORTABILITY.md  README.md  SECURITY.md  SKILLS.md  WHITEPAPER.md  emergent-axial-lisp.cabal  fourmolu.yaml
.github/workflows/: ci.yml
.omi/: AxialLisp.hs  AxialLispCheck.hs  axial_lisp.h  axial_lisp_check.c  closures.imo  closures.omi  combinators.imo  combinators.omi  configurations.imo  configurations.omi  cons.imo  cons.omi  facts.imo  facts.omi  rules.imo  rules.omi
app/: Main.hs
dev-docs/: IMPLEMENTATION-PLAN.md  OMI Gauge Table F Column.md  OMI-POLYBIUS-FORMALIZATION.md  OmiPolybiusGovernor.v  main.c  metatron.c  omi_lisp.c  omicron.c  test.c  tetragrammatron.c
dev-docs/.obsidian/: workspace.json
dev-docs/_archve/: 2026-07-18-Branch_·_Branch_·_Omnicron-Epistemic-Model_Assessment.md  Amendments.md  LOGOS-NOMOS-PATHOS Hamming-Coded COBS-CONS.md
docs/: DOT_NOTATION.md  INTRODUCTION.md  WIRE_INVARIANTS.md
proof-spine/: CLAIM-STATUS.md  PROOF-MANIFEST.yaml  README.md  THEOREM-CORRESPONDENCE.md
src/Emergent/: Error.hs  Expand.hs  MExpr.hs  Parser.hs  Printer.hs  SourceSpan.hs  Stage.hs  Syntax.hs
src/Emergent/Expand/: Core.hs  Error.hs
src/Emergent/MExpr/: Error.hs  Lower.hs  Parser.hs  Syntax.hs
src/Emergent/Stage/: Error.hs  Transition.hs
src/MetaCons/: Axis.hs  Bounded.hs  Kernel.hs  Serialize.hs  Singleton.hs
src/MetaCons/Serialize/: Error.hs
test/: Main.hs  TestHarness.hs
test/Golden/: ExpansionGolden.hs  MExprGolden.hs  ParserGolden.hs  SerializationGolden.hs
test/Golden/Parser/: quote.sexpr  unquote-splicing.sexpr
test/Negative/: AdvanceExpandedToTyped.hs  CallRemovedElaborateIdentity.hs  CallRemovedIdentity.hs  ConstructExpanded.hs  ConstructResolved.hs  ConstructTyped.hs  ImportRemovedIdentity.hs  LowerParsedDirectly.hs  LoweredSuccessor.hs  MixSomeTermUnchecked.hs  ParsedAsExpanded.hs  ParsedAsTyped.hs  ResolveSurface.hs
test/Property/: AxisProperties.hs  ExpansionProperties.hs  KernelProperties.hs  MExprProperties.hs  ParserRoundTrip.hs  SerializationProperties.hs  StageProperties.hs
test/Unit/: AxisSpec.hs  ExpandSpec.hs  KernelSpec.hs  MExprSpec.hs  ParserSpec.hs  SerializationSpec.hs  StageSpec.hs
test/golden/expand/: begin.source.sexpr  define.expanded.sexpr  if-three.expanded.sexpr  if-two.source.sexpr  lambda.source.sexpr  nested-application.source.sexpr  quoted-improper.expanded.sexpr  set.expanded.sexpr
test/golden/mexpr/: car.mexpr  car.sexpr  cdr.mexpr  cons.mexpr  list-empty.mexpr  list-three.mexpr  list-three.sexpr  nested-car-cons.mexpr  nested-car-cons.sexpr  nested-cons-car-cdr.mexpr  nested-cons-car-cdr.sexpr  quote.mexpr  whitespace.mexpr
test/golden/serialization/: atom-a.hex  binding-subr.hex  byte-00.hex  byte-ff.hex  capability-projection.hex  car32-12345678.hex  carrier-high-projective.hex  cdr32-12345678.hex  eval-special.hex  improper-list.hex  integrity-pathos.hex  nil.hex  origin-rules.hex  projection-azimuth.hex  proper-list.hex  resolver-profile0.hex  scope-fs.hex  stage-resolved.hex  structural-car.hex  time-nn.hex
