cabal-version:      3.0
name:               emergent-axial-lisp
version:            0.1.0.0
synopsis:           Emergent Axial Lisp and Meta-CONS Runtime
description:        Bootstrap implementation of the canonical Meta-CONS pair kernel.
license:            BSD-3-Clause
maintainer:         maintainers@invalid.local
category:           Language
build-type:         Simple
extra-source-files:
    test/Golden/Parser/*.sexpr

source-repository head
    type:     git
    location: .

common warnings
    default-extensions:
        DerivingStrategies
        NamedFieldPuns
        OverloadedStrings
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints

library
    import:           warnings
    exposed-modules:
        Emergent.Error
        Emergent.Parser
        Emergent.Printer
        Emergent.SourceSpan
        Emergent.Syntax
        MetaCons.Axis
        MetaCons.Bounded
        MetaCons.Kernel
        MetaCons.Singleton
    hs-source-dirs:   src
    build-depends:
        base >=4.17 && <4.21,
        parsec >=3.1 && <3.2,
        text >=2.0 && <2.2,
        transformers >=0.5 && <0.7
    default-language: Haskell2010

executable emergent-axial-lisp
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base >=4.17 && <4.21,
        emergent-axial-lisp
    default-language: Haskell2010

test-suite emergent-axial-lisp-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        Golden.ParserGolden
        Property.AxisProperties
        Property.ParserRoundTrip
        Property.KernelProperties
        TestHarness
        Unit.AxisSpec
        Unit.KernelSpec
        Unit.ParserSpec
    hs-source-dirs:   test
    build-depends:
        base >=4.17 && <4.21,
        emergent-axial-lisp,
        text >=2.0 && <2.2
    default-language: Haskell2010
