cabal-version:      3.0
name:               emergent-axial-lisp
version:            0.1.0.0
synopsis:           Emergent Axial Lisp and Meta-CONS Runtime
description:        Bootstrap implementation of the canonical Meta-CONS pair kernel.
license:            BSD-3-Clause
maintainer:         maintainers@invalid.local
category:           Language
build-type:         Simple
extra-source-files:
    test/Golden/Parser/*.sexpr
    test/golden/expand/*.sexpr
    test/golden/mexpr/*.mexpr
    test/golden/mexpr/*.sexpr
    test/golden/serialization/*.hex
    test/Negative/*.hs

source-repository head
    type:     git
    location: .

common warnings
    default-extensions:
        DerivingStrategies
        NamedFieldPuns
        OverloadedStrings
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints

library
    import:           warnings
    exposed-modules:
        Emergent.Error
        Emergent.Expand
        Emergent.Expand.Core
        Emergent.Expand.Error
        Emergent.MExpr
        Emergent.MExpr.Error
        Emergent.MExpr.Lower
        Emergent.MExpr.Parser
        Emergent.MExpr.Syntax
        Emergent.Parser
        Emergent.Printer
        Emergent.SourceSpan
        Emergent.Stage
        Emergent.Stage.Error
        Emergent.Stage.Transition
        Emergent.Syntax
        MetaCons.Axis
        MetaCons.Bounded
        MetaCons.Kernel
        MetaCons.Serialize
        MetaCons.Serialize.Error
        MetaCons.Singleton
    hs-source-dirs:   src
    build-depends:
        base >=4.17 && <4.21,
        bytestring >=0.11 && <0.13,
        parsec >=3.1 && <3.2,
        text >=2.0 && <2.2,
        transformers >=0.5 && <0.7
    default-language: Haskell2010

executable emergent-axial-lisp
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base >=4.17 && <4.21,
        emergent-axial-lisp
    default-language: Haskell2010

test-suite emergent-axial-lisp-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        Golden.ExpansionGolden
        Golden.ParserGolden
        Golden.MExprGolden
        Golden.SerializationGolden
        Property.AxisProperties
        Property.ExpansionProperties
        Property.ParserRoundTrip
        Property.KernelProperties
        Property.MExprProperties
        Property.SerializationProperties
        Property.StageProperties
        TestHarness
        Unit.AxisSpec
        Unit.ExpandSpec
        Unit.KernelSpec
        Unit.MExprSpec
        Unit.ParserSpec
        Unit.SerializationSpec
        Unit.StageSpec
    hs-source-dirs:   test
    build-depends:
        base >=4.17 && <4.21,
        bytestring >=0.11 && <0.13,
        emergent-axial-lisp,
        process >=1.6 && <1.7,
        text >=2.0 && <2.2
    default-language: Haskell2010
